--- a/src/samples/configuration/web.config
+++ b/src/samples/configuration/web.config
@@ -102,7 +102,8 @@
       x-iisnode-<server_variable_name> HTTP request headers; for a list of IIS server variables available see 
       http://msdn.microsoft.com/en-us/library/ms524602(v=vs.90).aspx; for example "AUTH_USER,AUTH_TYPE"
       
-    * configOverrides - optional file name containing overrides of configuration settings of the iisnode section of web.config; 
+    * configOverrides - optional file name containing overrides of 
+    settings of the iisnode section of web.config; 
       the format of the file is a small subset of YAML: each setting is represented as a <key>: <value> on a separate line 
       and comments start with # until the end of the line, e.g. 
             # This is a sample iisnode.yml file
@@ -135,7 +136,7 @@
       maxLogFileSizeInKB="128"
       maxTotalLogFileSizeInKB="1024"
       maxLogFiles="20"
-      devErrorsEnabled="true"
+      devErrorsEnabled="false"
       flushResponse="false"      
       enableXFF="false"
       promoteServerVars=""
@@ -153,4 +154,4 @@
     -->
 
   </system.webServer>
-</configuration>
+</>
